@@ -2702,7 +2702,6 @@ wxBEGIN_EVENT_TABLE( wxGrid, wxScrolledCanvas )
     EVT_SIZE( wxGrid::OnSize )
     EVT_DPI_CHANGED( wxGrid::OnDPIChanged )
     EVT_KEY_DOWN( wxGrid::OnKeyDown )
-    EVT_KEY_UP( wxGrid::OnKeyUp )
     EVT_CHAR ( wxGrid::OnChar )
 wxEND_EVENT_TABLE()
 
@@ -6301,7 +6300,9 @@ void wxGrid::OnKeyDown( wxKeyEvent& event )
 
 void wxGrid::OnKeyUp( wxKeyEvent& WXUNUSED(event) )
 {
-    // try local handlers
+    // This function is unused and not connected to the corresponding event in
+    // the event table, it is only kept to prevent changing ABI in this branch
+    // and doesn't exist at all in the later wxWidgets versions.
 }
 
 void wxGrid::OnChar( wxKeyEvent& event )
