@@ -285,6 +285,7 @@ wxMSW:
 - Fix possible crash in wxFileSystemWatcher (Rick van der Sluijs, #24119).
 - Fix restoring hidden top level windows (Christian Walther, #24117).
 - Add support for VT_UI8 OLE VARIANT type (Miguel Gimenez, #24115).
+- Fix using "Alt" when wxGrid has focus (Dietmar Schwertberger, #24247).
 
 wxOSX:
 
